--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,5 +40,12 @@
     <string name="treatments_activity_string">Activity:</string>
     <string name="treatments_iobtotal_label_string">Toal IOB:</string>
     <string name="treatments_iobactivitytotal_label_string">Total IOB activity:</string>
+    <string name="tempbasals_realduration_label_string">Dur:</string>
+    <string name="tempbasals_netratio_label_string">Ratio:</string>
+    <string name="tempbasals_netinsulin_label_string">Ins:</string>
+    <string name="tempbasals_iob_label_string">IOB:</string>
+    <string name="tempbasals_activity_string">Activity:</string>
+    <string name="tempbasals_iobtotal_label_string">Total IOB:</string>
+    <string name="tempbasals_iobactivitytotal_label_string">Total IOB activity:</string>
 
 </resources>
