rename profileviewer -> nsprofileviewer
Co-authored-by: hitosisasaki <hitosisasaki0212@gmail.com>
Co-authored-by: satokihanada <satoki0212@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -25,13 +25,14 @@
     <string name="objectives_gate_label_string">Gate:</string>
     <string name="objectives_button_start">Start</string>
     <string name="objectives_button_verify">Verify</string>
-    <string name="profileview_dia_label">DIA:</string>
-    <string name="profileview_activeprofile_label">Active profile:</string>
-    <string name="profileview_ic_label">IC:</string>
-    <string name="profileview_isf_label">ISF:</string>
-    <string name="profileview_basal_label">Basal:</string>
-    <string name="profileview_target_label">Target:</string>
-    <string name="profileview_noprofile_text">NO PROFILE SET</string>
+    <string name="nsprofileview_units_label">Units:</string>
+    <string name="nsprofileview_dia_label">DIA:</string>
+    <string name="nsprofileview_activeprofile_label">Active profile:</string>
+    <string name="nsprofileview_ic_label">IC:</string>
+    <string name="nsprofileview_isf_label">ISF:</string>
+    <string name="nsprofileview_basal_label">Basal:</string>
+    <string name="nsprofileview_target_label">Target:</string>
+    <string name="nsprofileview_noprofile_text">NO PROFILE SET</string>
     <string name="treatments_insulin_label_string">Insulin:</string>
     <string name="treatments_carbs_label_string">Carbs:</string>
     <string name="treatments_iob_label_string">IOB:</string>
@@ -51,7 +52,6 @@
     <string name="treatments_wizard_unit_label">U</string>
     <string name="treatments_wizard_iob_label">IOB</string>
     <string name="treatments_wizard_total_label">TOTAL</string>
-    <string name="profileview_units_label">Units:</string>
     <string name="openapsma_run">Run now</string>
     <string name="vitualpump_label">VIRTUAL PUMP</string>
     <string name="virtualpump_basebasalrate_label">Base basal rate:</string>
@@ -93,7 +93,7 @@
     <string name="objectives">Objectives</string>
     <string name="openapsma">OpenAPS MA</string>
     <string name="overview">Overview</string>
-    <string name="profileviewer">Profile Viewer</string>
+    <string name="profileviewer">NS Profile</string>
     <string name="tempbasals">Temp Basals</string>
     <string name="treatments">Treatments</string>
     <string name="virtualpump">Virtual Pump</string>
