--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,13 +3,9 @@
     <string name="title_activity_main">AndroidAPS</string>
 
     <string name="title_activity_preferences">Preferences</string>
-    <string name="ns_sync_title">Nightscout synchronization</string>
-    <string name="ns_sync_profile_title">Synchronize profile</string>
-    <string name="ns_units">Units</string>
     <string name="safety_title">Safety</string>
     <string name="safety_maxbolus_title">Max allowed bolus</string>
     <string name="safety_maxcarbs_title">Max allowed carbs</string>
-    <string name="nav_home">Home</string>
     <string name="nav_preferences">Preferences</string>
     <string name="nav_refreshtreatments">Refresh treatments from NS</string>
     <string name="nav_backup">Backup</string>
@@ -108,5 +104,25 @@
     <string name="days">days</string>
     <string name="minimalduration">Minimal duration</string>
     <string name="configbuilder_constrains">Constrains</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="loop">Loop</string>
+    <string name="configbuilder_loop">Loop</string>
+    <string name="loop_aps_label">APS</string>
+    <string name="loop_constrainsprocessed_label">After processed constrains</string>
+    <string name="loop_setbypump_label">Set by pump</string>
+    <string name="openapsma_lastenact_label">Last enacted</string>
+    <string name="dialog">Dialog</string>
+    <string name="refreshfromnightscout">Do you want to refresh treatments from Nightscout</string>
+    <string name="ok">OK</string>
+    <string name="cancel">Cancel</string>
+    <string name="noapsselected">NO APS SELECTED OR PROVIDED RESULT</string>
+    <string name="safety">Safety</string>
+    <string name="limits_title">Limits</string>
+    <string name="maxbasal_title">Max basal</string>
+    <string name="maxbasal_summary">Max U/hr a Temp Basal can be set to</string>
+    <string name="maxbasaliob_title">Max basal IOB</string>
+    <string name="maxbasaliob_summary">Maximum amount of non-bolus IOB OpenAPS can deliver</string>
 
 </resources>
