add source selection xdrip/nsclient
Co-authored-by: hitosisasaki <hitosisasaki0212@gmail.com>
Co-authored-by: satokihanada <satoki0212@gmail.com>

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -142,5 +142,8 @@
     <string name="carbs">Carbs</string>
     <string name="changeyourinput">Change your input!</string>
     <string name="setextendedbolusquestion">Set new extended bolus:</string>
+    <string name="configbuilder_bgsource">BG Source</string>
+    <string name="xdrip">xDrip</string>
+    <string name="nsclient">NSClient</string>
 
 </resources>
