--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -139,6 +139,7 @@
     <string name="confirmation">Confirmation</string>
     <string name="entertreatmentquestion">Enter new treatment:</string>
     <string name="bolus">Bolus</string>
+    <string name="basal">Basal</string>
     <string name="carbs">Carbs</string>
     <string name="changeyourinput">Change your input!</string>
     <string name="setextendedbolusquestion">Set new extended bolus:</string>
