detect ns versions

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -149,5 +149,6 @@
     <string name="closedloop">Closed Loop</string>
     <string name="openloop">Open Loop</string>
     <string name="openloop_newsuggestion">New suggestion available</string>
+    <string name="unsupportedclientver">Unsupported version of NSClient</string>
 
 </resources>
